// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders CreateAccount component 1`] = `
<div
  className="root"
>
  <h1
    className="header"
  >
    <mock-FormattedMessage
      defaultMessage="Account Sign-in"
      id="checkoutPage.guestSignIn.header"
    />
  </h1>
  <div
    className="contentContainer"
  >
    <CreateAccount
      classes={
        Object {
          "root": "createAccountRoot",
        }
      }
      isCancelButtonHidden={false}
      onCancel={[MockFunction toggleCreateAccountView]}
    />
    <button
      className="root_normalPriority"
      disabled={false}
      onClick={[MockFunction handleBackToCheckout]}
      type="button"
    >
      <span
        className="content"
      >
        <mock-FormattedMessage
          defaultMessage="Back to Checkout"
          id="checkoutPage.guestSignIn.backToCheckout"
        />
      </span>
    </button>
  </div>
</div>
`;

exports[`renders ForgotPassword component 1`] = `
<div
  className="root"
>
  <h1
    className="header"
  >
    <mock-FormattedMessage
      defaultMessage="Account Sign-in"
      id="checkoutPage.guestSignIn.header"
    />
  </h1>
  <div
    className="contentContainer"
  >
    <ForgotPassword
      classes={
        Object {
          "root": "forgotPasswordRoot",
        }
      }
      onCancel={[MockFunction toggleForgotPasswordView]}
    />
    <button
      className="root_normalPriority"
      disabled={false}
      onClick={[MockFunction handleBackToCheckout]}
      type="button"
    >
      <span
        className="content"
      >
        <mock-FormattedMessage
          defaultMessage="Back to Checkout"
          id="checkoutPage.guestSignIn.backToCheckout"
        />
      </span>
    </button>
  </div>
</div>
`;

exports[`renders SignIn component 2`] = `
<div
  className="root_hidden"
>
  <h1
    className="header"
  >
    <mock-FormattedMessage
      defaultMessage="Account Sign-in"
      id="checkoutPage.guestSignIn.header"
    />
  </h1>
  <div
    className="contentContainer"
  >
    <SignIn
      classes={
        Object {
          "modal_active": undefined,
          "root": "signInRoot",
        }
      }
      showCreateAccount={[MockFunction toggleCreateAccountView]}
      showForgotPassword={[MockFunction toggleForgotPasswordView]}
    />
    <button
      className="root_normalPriority"
      disabled={false}
      onClick={[MockFunction handleBackToCheckout]}
      type="button"
    >
      <span
        className="content"
      >
        <mock-FormattedMessage
          defaultMessage="Back to Checkout"
          id="checkoutPage.guestSignIn.backToCheckout"
        />
      </span>
    </button>
  </div>
</div>
`;
